# danyeaw.github.io

./: .doit.db.bak  .gitignore  CNAME  Pipfile  README.md  archive.html  conf.py  github-actions.gaphor  index.html  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  state_data.json
2018/: index.html
2019/: index.html
2021/: index.html
2024/: index.html
2025/: index.html
about-me/: index.html  index.md
assets/js/: tag_cloud_data.json
blog/create-a-transportation-mobility-cloud-in-python/: index.html  index.md
blog/gui-widget-for-beeware/: index.html  index.md
categories/: anaconda.xml  beeware.xml  briefcase.xml  cat_career.xml  cat_linux.xml  cat_python.xml  cicd.xml  github.xml  gnome.xml  gui.xml  index.html  leadership.xml  opensuse.xml  packaging.xml  poetry.xml  programming.xml  python.xml  toga.xml  widget.xml  yubikey.xml
categories/anaconda/: index.html
categories/beeware/: index.html
categories/briefcase/: index.html
categories/cat_career/: index.html
categories/cat_linux/: index.html
categories/cat_python/: index.html
categories/cicd/: index.html
categories/github/: index.html
categories/gnome/: index.html
categories/gui/: index.html
files/: github-actions.gaphor
galleries/: index.html  rss.xml
listings/: index.html
pages/: about-me.md  slides.md
posts/: a-big-job-change.md  github-actions-automate-your-python-development-workflow.md  gnome-gitlab-cli.md  gui-widget-for-beeware.md  opensuse-with-passwordless-u2f-login.md  python-packaging-with-poetry-and-briefcase.md
slides/: index.html
(+38 files in other folders)
