[tool.poetry]
name = "danyeaw.github.io"
version = "0.1.0"
description = "Dan Yeaw's Blog"
authors = ["Dan Yeaw <dan@yeaw.me>"]

[tool.poetry.dependencies]
python = "^3.8"
nikola = "^8.0.3"
aiohttp = "^3.6.2"
watchdog = "^0.9.0"
ghp-import2 = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==1.1.11"]
build-backend = "poetry.masonry.api"
