[tool.poetry]
name = "danyeaw.github.io"
version = "0.1.0"
description = "Dan Yeaw's Blog"
authors = ["Dan Yeaw <dan@yeaw.me>"]

[tool.poetry.dependencies]
python = "^3.8"
nikola = "^8.0.3"
aiohttp = "^3.6.2"
watchdog = "^0.10"
ghp-import2 = "^1.0.1"
toml = "^0.10.2"

[tool.poetry.extras]
Extras = ["Nikola"]

[build-system]
requires = ["poetry==1.1.11"]
build-backend = "poetry.masonry.api"
